--- a/Views/DangKyXetTuyenKhac/Ielts.cshtml
+++ b/Views/DangKyXetTuyenKhac/Ielts.cshtml
@@ -255,9 +255,9 @@
                         <div class="row mb-3">
                             <div class="col-xxl-12">
                                 <div class="form-group mb-2">
-                                    <label class="form-label">Chứng nhận kết quả thi</label>
+                                    <label class="form-label" style="font-weight:bold">Chứng nhận kết quả thi <font color="red">(*)</font></label>
                                     <div class="col-md-12">
-                                        <input class="form-control" id="files_chungnhan" multiple="multiple" name="files" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
+                                        <input class="form-control small" id="files_chungnhan" multiple="multiple" name="files" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
                                         <span id="File_ChungNhan_Error" class="small mb-1 text-danger"></span>
                                         <table class="table" id="FilesList_ChungNhan_View" style="visibility:hidden; width: 100%">
                                             <tr style="display:none"> <th colspan="2"><input type="hidden" id="ChungNhan_Files" /></th></tr>
@@ -266,8 +266,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                     <div class="col-xxl-4">
                         <div class="row md-0">
@@ -281,12 +279,12 @@
                                     <tbody>
                                         <tr>
                                             <td>
-                                                <div class="row mb-3">
+                                                <div class="row mb-1">
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label class="form-label">Học bạ </label>
+                                                        <div class="form-group mb-0">
+                                                            <label class="form-label mb-0 mt-0">Học bạ </label>
                                                             <div class="col-md-12">
-                                                                <input class="form-control" id="files_hocba" multiple="multiple" name="files_hocba" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
+                                                                <input class="form-control small" id="files_hocba" multiple="multiple" name="files_hocba" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <table class="table" id="FilesList_HocBa_View" style="visibility:hidden; width: 100%">
                                                                     <tr style="display:none">
                                                                         <th colspan="2"><input type="hidden" id="HocBa_Files" /></th>
@@ -296,10 +294,10 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label class="form-label">Căn cước công dân</label>
+                                                        <div class="form-group mb-0">
+                                                            <label class="form-label mb-0 mt-0">Căn cước công dân</label>
                                                             <div class="col-md-12">
-                                                                <input class="form-control" id="files_cccd" multiple="multiple" name="files_cccd" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
+                                                                <input class="form-control small" id="files_cccd" multiple="multiple" name="files_cccd" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <table class="table" id="FilesList_CCCD_View" style="visibility:hidden; width: 100%">
                                                                     <tr style="display:none">
                                                                         <th colspan="2"><input type="hidden" id="CCCD_Files" /></th>
@@ -309,10 +307,10 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-xxl-12">
-                                                        <div class="form-group mb-2">
-                                                            <label class="form-label">Bằng Tốt nghiệp</label>
+                                                        <div class="form-group mb-0">
+                                                            <label class="form-label mb-0 mt-0">Bằng Tốt nghiệp</label>
                                                             <div class="col-md-12">
-                                                                <input class="form-control" id="files_bangtn" multiple="multiple" name="files_bangtn" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
+                                                                <input class="form-control small" id="files_bangtn" multiple="multiple" name="files_bangtn" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <table class="table" id="FilesList_BangTN_View" style="visibility:hidden; width: 100%">
                                                                     <tr style="display:none"><th colspan="2"><input type="hidden" id="BangTN_Files" /></th></tr>
                                                                 </table>
@@ -321,9 +319,9 @@
                                                     </div>
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-0">
-                                                            <label class="form-label">Minh chứng ưu tiên</label>
-                                                            <div class="col-md-12">
-                                                                <input class="form-control" id="files_uutien" multiple="multiple" name="files_uutien" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
+                                                            <label class="form-label mb-0 mt-0">Minh chứng ưu tiên</label>
+                                                            <div class="col-md-12 ">
+                                                                <input class="form-control small" id="files_uutien" multiple="multiple" name="files_uutien" type="file" data-val="true" accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <table class="table" id="FilesList_UuTien_View" style="visibility:hidden; width: 100%">
                                                                     <tr style="display:none">
                                                                         <th colspan="2"><input type="hidden" id="UuTien_Files" /></th>
