--- a/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
+++ b/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
@@ -2,7 +2,12 @@
     ViewBag.Title = "Đăng ký xét tuyển";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<script src="~/Scripts/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<link href="~/Scripts/bootstrap-datepicker.min.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+@*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>*@
 <style>
     label {
         white-space: nowrap !important;
@@ -202,8 +207,9 @@
                         <div class="row mb-3">
                             <div class="col-xxl-12">
                                 <div class="form-group mb-2">
+
                                     <label class="form-label col-md-12">
-                                        Chứng nhận
+                                        <span style="font-weight:bold"> Chứng nhận kết quả thi</span>
                                         (<span id="sp_view_mc_ketqua"></span>)
                                     </label>
                                     <div class="col-md-12">
@@ -236,7 +242,7 @@
                                                 <div class="row">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group">
-                                                            <label class="form-label">
+                                                            <label class="form-label col-12 mb-0">
                                                                 Học bạ
                                                                 (<span id="sp_view_mc_hocba"></span>)
                                                             </label>
@@ -252,9 +258,9 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-xxl-12">
-                                                        <div class="form-group">
-                                                            <label class="form-label col-12">
+                                                    <div class="col-xxl-12 mt-0">
+                                                        <div class="form-group  mt-0">
+                                                            <label class="form-label col-12 mb-0">
                                                                 Căn cước công dân (<span id="sp_view_mc_cccd"></span>)
                                                             </label>
                                                             <div class="col-md-12">
@@ -269,9 +275,9 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-xxl-12">
-                                                        <div class="form-group">
-                                                            <label class="form-label col-12">
+                                                    <div class="col-xxl-12 mt-0">
+                                                        <div class="form-group  mt-0">
+                                                            <label class="form-label col-12 mb-0">
                                                                 Bằng Tốt nghiệp
                                                                 (<span id="sp_view_mc_bang_tn"></span>)
                                                             </label>
@@ -287,9 +293,9 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-xxl-12">
-                                                        <div class="form-group">
-                                                            <label class="form-label col-12">
+                                                    <div class="col-xxl-12 mt-0">
+                                                        <div class="form-group  mt-0">
+                                                            <label class="form-label col-12 mb-0">
                                                                 Minh chứng ưu tiên
                                                                 (<span id="sp_view_mc_uutien"></span>)
                                                             </label>
@@ -389,9 +395,7 @@
 </div>
 <input type="hidden" value="@ViewBag.Dkxt_ID" id="hidden_Dkxt_ID" />
 <input type="hidden" id="dkxt_id_checkin" name="dkxt_id_checkin" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
 
 <div class="modal fade" id="modal_thongbao_delete" tabindex="-1" role="dialog" aria-labelledby="modal_thongbao_delete" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal" role="document">
@@ -416,7 +420,7 @@
                             Dkxt_Url: $("#hiden_duongdan_file_xoa").val(),
                         }
                         console.log('tét delete', data_post)
-                       
+
                         $.ajax({
                             url: '/DangKyXetTuyenKhac/Delete_MinhChung',
                             type: "POST",
@@ -430,7 +434,7 @@
                                 console.error('Error update mc:', error);
                             }
                         });
-                    }                   
+                    }
                 </script>
                 <button class="btn btn-primary" type="button" onclick="bt_close_modal_xoa_click()">Đóng</button>
             </div>
@@ -588,7 +592,7 @@
                         $('#sp_view_mc_uutien').append(str_a);
                     }
 
-                    
+
                 }
             },
             error: function (errormessage) {
@@ -986,7 +990,7 @@
             Dkxt_MinhChung_UuTien: fileData[4].savePath,
         }
         console.log(formData);
-        
+
         $.ajax({
             url: '/DangKyXetTuyenKhac/IeltsEdit_Json',
             data: JSON.stringify(formData),
@@ -994,7 +998,7 @@
             contentType: 'application/json;charset=utf-8',
             dataType: 'json',
             success: function (res) {
-                if (res.success) {             
+                if (res.success) {
                     $("#loadingModal").modal("hide");
                     window.location.href = '/DangKyXetTuyenKhac/Ielts';
                 } else {
