--- a/Views/DangKyXetTuyens/DkdtnkEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkdtnkEdit.cshtml
@@ -479,7 +479,6 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <label class="form-label">Căn cước công dân (<span id="div_show_file_mc"></span>)</label>
-
                                                         <div class="col-md-12">
                                                             <input class="form-control" id="files_cancuoccd" multiple="multiple" name="files_cancuoccd" type="file" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
                                                             <span id="CCCD_Error" class="small mb-1 text-danger"></span>
@@ -491,16 +490,12 @@
                                                         <div class="form-group mb-0">
                                                             <div class="col-md-12" id="div_group_mc_noplephi">
                                                                 <hr />
-                                                                <label class="col-12 mb-1" id="label_thongbaomc_noplp">Minh chứng nộp lệ phí</label>
-
+                                                                @*<label class="col-12 mb-1" id="label_thongbaomc_noplp">Minh chứng nộp lệ phí</label>*@
                                                                 <div class="col-md-12" id="div_show_file_mc_noplephi">
-
                                                                 </div>
                                                             </div>
-
                                                         </div>
                                                     </div>
-
                                                 </div>
                                             </td>
                                         </tr>
