--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtkqDgnl.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtkqDgnl.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "DkxtkqDgnl";
+    ViewBag.Title = "Dùng kết quả đánh giá năng lực";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 <style>
@@ -91,7 +91,7 @@
                                 <th>Ngày dự thi</th>
                                 <th>Lệ phí</th>
                                 <th>Hồ sơ</th>
-                                <th>Kiểm tra</th>
+                                <th style="width:100px">Kiểm tra</th>
                             </tr>
 
                             @foreach (var item in Model)
