--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -96,38 +96,38 @@
             Theo dõi nộp kinh phí
         </a>*@
                         <a class="nav-link" href="@Url.Action("TheoDoiNopHoSo", "TongHopSoLieuDKXTs")">
-                            <div class="nav-link-icon"><i data-feather="book-open"></i></div>
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Theo dõi hồ sơ xét tuyển
                         </a>
                         <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">
-                            <div class="nav-link-icon"><i data-feather="monitor"></i></div>
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Thông tin thí sinh
                         </a>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuThiSinh" aria-expanded="true" aria-controls="menuThiSinh">
-                            <div class="nav-link-icon"><i data-feather="database"></i></div>
-                            QL Đăng ký xét tuyển
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
+                            Đăng ký xét tuyển
                             <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="menuThiSinh" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested">                             
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng KQ thi TN THPT</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng KQ học bạ THPT</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo QĐ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqCcnn", "DangKyXetTuyens")">SD chứng chỉ ngoại ngữ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyens")">SD KQ thi đánh giá năng lực hoặc đánh giá tư duy</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng kết quả thi tốt nghiệp THPT</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng kết quả học bạ THPT</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo quy định của trường</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqCcnn", "DangKyXetTuyens")">Sử dụng các loại chứng chỉ ngoại ngữ</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyens")">Sử dụng kết quả thi đánh giá năng lực hoặc tư duy</a>
                             </nav>
                         </div>
                         <a class="nav-link" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">
-                            <div class="nav-link-icon"><i data-feather="pocket"></i></div>
-                            QL Dự thi năng khiếu
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
+                            Đăng ký thi năng khiếu
                         </a>
                         <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
-                            <div class="nav-link-icon"><i data-feather="shield"></i></div>
-                            Tổ hợp môn
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
+                           Quản lý Tổ hợp môn
                         </a>
                         <a class="nav-link" href="@Url.Action("Index", "Nganhs")">
-                            <div class="nav-link-icon"><i data-feather="package"></i></div>
-                            Ngành
+                            <div class="nav-link-icon"><i data-feather="list"></i></div>
+                            Quản lý Ngành
                         </a>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuDanhMuc" aria-expanded="false" aria-controls="menuDanhMuc">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
