--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt_hs_view.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt_hs_view.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Theo dõi hồ sơ thí sinh";
+    ViewBag.Title = "Kiểm tra hồ sơ xét tuyển bằng kết quả thi tốt nghiệp";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 
