--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtTt_hs_view.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtTt_hs_view.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "TheoDoiNopHoSoDetailPt3";
+    ViewBag.Title = "Kiểm tra hồ sơ xét tuyển theo hình thức tuyển thẳng";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 <style>
