--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -95,37 +95,37 @@
             <div class="nav-link-icon"><i data-feather="slack"></i></div>
             Theo dõi nộp kinh phí
         </a>*@
-                        <a class="nav-link" href="@Url.Action("TheoDoiNopHoSo", "TongHopSoLieuDKXTs")">
+                        <a class="nav-link me-auto" href="@Url.Action("TheoDoiNopHoSo", "TongHopSoLieuDKXTs")">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Theo dõi hồ sơ xét tuyển
                         </a>
-                        <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">
+                        <a class="nav-link me-auto" href="@Url.Action("Index", "ThiSinhDangKys")">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Thông tin thí sinh
                         </a>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuThiSinh" aria-expanded="true" aria-controls="menuThiSinh">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Đăng ký xét tuyển
-                            <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            <div class="sidenav-collapse-arrow"  ><i class="fas fa-angle-down"></i></div>
                         </a>
-                        <div class="collapse" id="menuThiSinh" data-bs-parent="#accordionSidenav">
-                            <nav class="sidenav-menu-nested">                             
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng kết quả thi tốt nghiệp THPT</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng kết quả học bạ THPT</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo quy định của trường</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqCcnn", "DangKyXetTuyens")">Sử dụng các loại chứng chỉ ngoại ngữ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyens")">Sử dụng kết quả thi đánh giá năng lực hoặc tư duy</a>
+                        <div class="collapse me-auto" id="menuThiSinh" data-bs-parent="#accordionSidenav">
+                            <nav class="sidenav-menu-nested justify-content-start">                             
+                                <a class="nav-link justify-content-start" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng kết quả thi tốt nghiệp trung học phổ thông</a>
+                                <a class="nav-link justify-content-start" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng kết quả học bạ trung học phổ thông</a>
+                                <a class="nav-link justify-content-start" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo quy định của trường</a>
+                                <a class="nav-link justify-content-start" href="@Url.Action("DkxtkqCcnn", "DangKyXetTuyens")">Sử dụng các loại chứng chỉ ngoại ngữ</a>
+                                <a class="nav-link justify-content-start" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyens")">Sử dụng kết quả thi đánh giá năng lực hoặc tư duy</a>
                             </nav>
                         </div>
-                        <a class="nav-link" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">
+                        <a class="nav-link me-auto" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Đăng ký thi năng khiếu
                         </a>
-                        <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
+                        <a class="nav-link me-auto" href="@Url.Action("Index", "ToHopMons")">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                            Quản lý Tổ hợp môn
                         </a>
-                        <a class="nav-link" href="@Url.Action("Index", "Nganhs")">
+                        <a class="nav-link me-auto" href="@Url.Action("Index", "Nganhs")">
                             <div class="nav-link-icon"><i data-feather="list"></i></div>
                             Quản lý Ngành
                         </a>
