--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn_hs_view.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn_hs_view.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Theo dõi hồ sơ";
+     ViewBag.Title = "Kiểm tra hồ sơ xét tuyển bằng chứng chỉ ngoại ngữ hoặc đánh giá tư duy";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 
