--- a/Views/DangKyXetTuyenThang/Edit.cshtml
+++ b/Views/DangKyXetTuyenThang/Edit.cshtml
@@ -274,7 +274,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="row mt-0 md-0">s
+                                                <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-1">
                                                             <label class="form-label">
