--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -333,7 +333,7 @@
                 <div class="row mb-3">
                     <div class="col-xxl-12" style="text-align:center">
                         <input class="btn btn-outline-primary col-lg-1 col-4" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
-                        <input class="btn btn-outline-secondary col-lg-1 col-4" id="bt_close_div_update_aspirations_second" type="button" value="Hủy bỏ" />
+                        <input class="btn btn-outline-secondary col-lg-1 col-4" id="bt_close_div_update_aspirations_second" type="button" value="Quay lại" />
                     </div>
                 </div>
             </div>
@@ -1004,7 +1004,6 @@
                 so_file_cccd++;
             }
             for (const item of formdata_bang_tn) {
-
                 formData_All.append(item[0], item[1]);
                 so_file_btn++;
             }
@@ -1056,8 +1055,8 @@
             Dkxt_HB_MinhChung_Bang: _Dkxt_MinhChung_Bang,
             Dkxt_HB_MinhChung_UuTien: _Dkxt_MinhChung_UuTien,
         }
-        console.log("new",formData_dknv_new);
-
+        console.log("new", formData_dknv_new);
+        return;
         /* console.log(formData_dknv_new.Nganh_ID);*/
         $("#loadingModal").modal("show");
 
